--- a/App/RepresentApp/mobile/src/main/AndroidManifest.xml
+++ b/App/RepresentApp/mobile/src/main/AndroidManifest.xml
@@ -4,6 +4,11 @@
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
+    <uses-permission
+        android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permisssion.ACCESS_COARSE_LOCATION"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -20,6 +25,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <user-sdk
+            android:minSdkVersion="8"
+            android:targetSdkVersion="21"/>
+
+
+        <user-permission
+            android:name="android.permisson.ACCESS_FINE_POINT"/>
+
+
+
+
         <activity
             android:name=".DisplayMessageActivity"
             android:label="@string/title_activity_display_message"
@@ -29,6 +46,15 @@
             android:label="@string/title_activity_display_current"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".DetailActivity"></activity>
+        <service android:name=".PhoneToWatchService"/>
+
+        <service android:name=".PhoneListenerService"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="com.google.android.gms.wearable.BIND_LISTENER" />
+            </intent-filter>
+        </service>
+
         <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version"/>
     </application>
 
