Addedlatest tweet and picture

--- a/App/RepresentApp/mobile/src/main/AndroidManifest.xml
+++ b/App/RepresentApp/mobile/src/main/AndroidManifest.xml
@@ -40,11 +40,26 @@
         <activity
             android:name=".DisplayMessageActivity"
             android:label="@string/title_activity_display_message"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+
         <activity
             android:name=".DisplayCurrentActivity"
             android:label="@string/title_activity_display_current"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <activity android:name=".DetailActivity"></activity>
         <service android:name=".PhoneToWatchService"/>
 
@@ -56,6 +71,9 @@
         </service>
 
         <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version"/>
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="2bb7fb1475af50c5848db1a3c7323698f321eb4d" />
     </application>
 
 </manifest>
